add some features

--- a/indexlambor.html
+++ b/indexlambor.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Automobili Lamborghini</title>
+    <link rel="icon" href="https://www.lamborghini.com/ico/favicon-32x32.png">
     <link rel="stylesheet" href="./assets/css/styleslambor.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
@@ -32,9 +33,9 @@
             <!-- End Nav -->
 
             <!-- Begin search button -->
-            <div class="search-btn">
-                <i class="search-icon ti-search"></i>
-            </div>
+                <div class="search-btn">
+                    <i class="search-icon ti-search"></i>
+                </div>
             <!-- End search button -->
         </div>
 
@@ -134,12 +135,33 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2837.9713308877162!2d11.124090751320804!3d44.65893739472872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477fc395bbdef5b9%3A0xb1e41e47e5246288!2sAutomobili%20Lamborghini%20Store!5e0!3m2!1svi!2s!4v1649819303949!5m2!1svi!2s" width="60%" height="600" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="headquater-img"></div>
-        </div>
-    </div>
-        <div class="footer">
+            <div class="news">
+                <div class="news-banner">
+                    <h1 class="news-text">LAMBORGHINI WORLD</h1>
+                    <img src="./assets/css/news/news header.jpg" alt="">
+                </div>
 
+                <div class="news_header">
+                    <div class="news_header-wrapper">
+                        <h1 class="news_header-date">12 APRIL 2022</h1>
+                        <h2 class="news_header-heading">LAMBORGHINI HURACÁN TECNICA: THE BEST OF ALL WORLDS</h2>
+                        <p class="news_header-content">Introducing Huracán Tecnica: the next-generation Lamborghini masterpiece designed to deliver the best on both road and track</p>
+                    </div>
+                </div>
+    
+            </div>
+            <div class="footer">
+                <p>
+                    Copyright © 2022 Automobili Lamborghini S.p.A. a sole shareholder company part of Audi Group.
+                    <br><br>
+                    All rights reserved. VAT no. IT 00591801204
+                </p>
+            </div>
         </div>
+
     </div>
+
+
   
 </body>
 <div class="modal js-modal">
